[tool.poetry]
name = "aiohttp_server"
version = "0.1.0"
description = ""
authors = ["nikitqa48 <nikitqaa1901@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
aiohttp = "^3.9.5"
click = "^8.1.7"
pytest = "^8.2.0"
passlib = "^1.7.4"
requests = "^2.31.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
